<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Details">

    <TextView
        android:id="@+id/txtCN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="48dp"
        android:text="Card Number"
        android:textSize="18sp"
        app:fontFamily="serif" />

    <EditText
        android:id="@+id/EtCN"
        android:layout_width="284dp"
        android:layout_height="46dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:ems="10"
        android:hint="@string/No"
        android:inputType="number"
        android:maxLength="16" />

    <TextView
        android:id="@+id/txtED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="15dp"
        android:text="Exp. Date"
        android:textSize="18sp"
        app:fontFamily="serif" />

    <EditText
        android:id="@+id/EtED"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:ems="6"
        android:hint="@string/Date"
        android:inputType="date"
        android:maxLength="5" />

    <TextView
        android:id="@+id/txtCVV"
        android:layout_width="41dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="15dp"
        android:text="cvv"
        android:textSize="18sp"
        app:fontFamily="serif" />

    <EditText
        android:id="@+id/EtCVV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:ems="3"
        android:hint="@string/cvv"
        android:inputType="number"
        android:maxLength="3" />

    <Button
        android:id="@+id/BtnShow"
        android:layout_width="281dp"
        android:layout_height="45dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"
        android:onClick="onClick1"
        android:text="@string/Show"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/BtnUpdate"
        android:layout_width="281dp"
        android:layout_height="45dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:onClick="onClick2"
        android:text="@string/Update"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/BtnDelete"
        android:layout_width="281dp"
        android:layout_height="45dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:onClick="onClick3"
        android:text="@string/Delete"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

</LinearLayout>