<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="1dp"
    tools:context=".CRUDActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView"
        android:layout_width="144dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif"
        android:text="Name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="144dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="Mobile Number"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="144dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="Email"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="144dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="Date"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="144dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="Location"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="144dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="Complaints/Damage"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="469dp"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="-375dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nName"
            android:layout_width="206dp"
            android:layout_height="42dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/txt_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/nMobile"
            android:layout_width="206dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/txt_mobile"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nName" />

        <EditText
            android:id="@+id/nEmail"
            android:layout_width="206dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/txt_email"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nMobile" />

        <EditText
            android:id="@+id/nDate"
            android:layout_width="206dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/txt_date"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nEmail" />



        <EditText
            android:id="@+id/nAddress"
            android:layout_width="206dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/txt_address"
            android:inputType="textPersonName"
            android:maxLength="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nDate" />

        <EditText
            android:id="@+id/nComplaint"
            android:layout_width="206dp"
            android:layout_height="43dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/txt_complaints"
            android:inputType="textPersonName"
            android:maxLength="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nAddress" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="-60dp">


        <Button
            android:id="@+id/nBtnSave"
            android:layout_width="134dp"
            android:layout_height="35dp"
            android:layout_marginTop="9dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/holo_blue_bright"
            android:onClick="n_onclickSave"
            android:text="@string/btn_save"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.035"
            tools:layout_editor_absoluteX="73dp" />

        <Button
            android:id="@+id/nBtnDelete"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="50dp"
            android:background="@android:color/holo_blue_bright"
            android:onClick="n_onlickDelete"
            android:text="@string/btn_delete"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nBtnShow"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="236dp" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">




        <Button
            android:id="@+id/nBtnShow"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_marginTop="9dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/holo_blue_bright"
            android:onClick="n_onlickShow"
            android:text="@string/btn_show"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nComplaint"
            app:layout_constraintVertical_bias="0.012"
            tools:layout_editor_absoluteX="246dp" />


        <Button
            android:id="@+id/nBtnUpdate"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_marginTop="9dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="264dp"
            android:background="@android:color/holo_blue_bright"
            android:onClick="n_onlickUpdate"
            android:text="@string/btn_update"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nBtnSave"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="75dp" />



    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="395dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/common_google_signin_btn_text_dark_focused"
        android:onClick="choosePhoto"
        android:text="@string/btn_uploadImage"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954"
        tools:layout_editor_absoluteX="16dp" />

</LinearLayout>